# cool-tool

./: README.md  pyproject.toml
src/cool_tool/: __init__.py  cli.py
src/cool_tool/commands/: distance_matrix_hamming.py  hello.py  hi.py
