[project]
name = "cool-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sofia Drobysheva", email = "s.drobysheva@scdiscoveries.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cool-tool = "cool_tool:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
