[project]
name = "cool-tool"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sofia Drobysheva", email = "s.drobysheva@scdiscoveries.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "typer",
]

# uv uses this when you run `uv tool install .`
[project.scripts]
cool-tool = "cool_tool.cli:app"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

